[package]
name = "sph"
version = "0.1.0"
edition = "2021"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Enable link-time optimization
lto = true
# 3 == all optimization
opt-level = 3
# Strip all symbols
strip = "symbols"

[dependencies]
# In order to use dynamic_linking, you need to set the environment variable:
# on Mac:
# DYLD_FALLBACK_LIBRARY_PATH=$HOME/.rustup/toolchains/stable-aarch64-apple-darwin/lib:$HOME/.rustup/toolchains/stable-aarch64-apple-darwin/lib/rustlib/aarch64-apple-darwin/lib
# Where the path comes from `rustc --print=sysroot` (with /lib appended).
# On Windows (as an example):
# PATH=C:\Users\jafischer\.rustup\toolchains\stable-x86_64-pc-windows-msvc\bin\;C:\Users\jafischer\mysrc\sph\target\debug\deps\;C:\Users\jafischer\mysrc\sph\target\release\deps
bevy = { version = "0.15", features = ["dynamic_linking", "multi_threaded"] }
rand = "0"
derivative = "2.2.0"