[package]
name = "bevy-fluid-sim"
version = "0.2.2"
edition = "2021"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Enable link-time optimization
lto = true
# 3 == all optimization
opt-level = 3
# Strip all symbols
strip = "symbols"

[dependencies]
# In order to use dynamic_linking, you need to set the environment variable:
# on Mac:
# DYLD_FALLBACK_LIBRARY_PATH=$HOME/.rustup/toolchains/stable-aarch64-apple-darwin/lib:$HOME/.rustup/toolchains/stable-aarch64-apple-darwin/lib/rustlib/aarch64-apple-darwin/lib
# Where the path comes from `rustc --print=sysroot` (with /lib appended).
# On Windows (as an example):
# PATH=%USERPROFILE\.rustup\toolchains\stable-x86_64-pc-windows-msvc\bin\;.\target\debug\deps\;.\target\release\deps
bevy = { version = "0.15", features = ["dynamic_linking", "multi_threaded"] }
#bevy = { version = "0.15", features = ["multi_threaded"] }
# Command line arg processing.
clap = { version = "4.5.8", features = ["derive"] }
# once_cell: lazily-initialized statics
once_cell = "1.20.3"
# Random
rand = "0"
# Parallel iteration
rayon = "1.10.0"
